--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "client-s3-deploy": "aws s3 sync build/ s3://react-scanner --profile admins3",
+    "client-deploy": "npm run build && npm run client-s3-deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
