--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "react-scripts build",
     "client-s3-deploy": "aws s3 sync build/ s3://react-scanner --profile admins3",
     "client-deploy": "npm run build && npm run client-s3-deploy",
+    "client-cloudfront": "aws cloudfront create-invalidation --distribution-id E1T93TEST16DC9 --paths /* --profile admins3",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
